Fixed homepage positioning problem on Firefox & IE.

--- a/frontend/src/sass/screen.scss
+++ b/frontend/src/sass/screen.scss
@@ -335,7 +335,7 @@ h3 {
 .home-wrap {
     position: relative;
     min-height: 100%;
-    margin-top: -46px; // Height of navbar
+    top: -53px; // Height of navbar
 }
 
 .wards-map {
